--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -30,11 +30,13 @@
     top: 0;
     left: -100%;
     transition: 850ms;
+    z-index: 5;
   }
   
   .nav-menu.active {
     left: 0;
     transition: 350ms;
+    
   }
   
   .nav-text {
